--- a/styles/clicker-game.css
+++ b/styles/clicker-game.css
@@ -43,11 +43,12 @@
 }
 
 .js-clicker-button-over-100000 {
-  height: 10px;
-  width: 10px;
-  border-radius: 3px;
+  height: 20px;
+  width: 45px;
+  border-radius: 10px;
   color: aliceblue;
   background-color: black;
+  border: 1px solid red;
 }
 .number-div {
   position: absolute;
