--- a/styles/general.css
+++ b/styles/general.css
@@ -5,7 +5,7 @@ body {
 .main-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-row-gap: 25px;
   grid-column-gap: 25px;
 }
